--- a/Proyecto/tau.bib
+++ b/Proyecto/tau.bib
@@ -33,35 +33,65 @@
 	year = {1963},
 }
 
-
-
-@Article{math11102322,
-AUTHOR = {Shafique, Arslan and Khan, Kashif Hesham and Hazzazi, Mohammad Mazyad and Bahkali, Ismail and Bassfar, Zaid and Rehman, Mujeeb Ur},
-TITLE = {Chaos and Cellular Automata-Based Substitution Box and Its Application in Cryptography},
-JOURNAL = {Mathematics},
-VOLUME = {11},
-YEAR = {2023},
-NUMBER = {10},
-ARTICLE-NUMBER = {2322},
-URL = {https://www.mdpi.com/2227-7390/11/10/2322},
-ISSN = {2227-7390},
-ABSTRACT = {Substitution boxes are the key factor in symmetric-key cryptosystems that determines their ability to resist various cryptanalytic attacks. Creating strong substitution boxes that have multiple strong cryptographic properties at the same time is a challenging task for cryptographers. A significant amount of research has been conducted on S-boxes in the past few decades, but the resulting S-boxes have been found to be vulnerable to various cyberattacks. This paper proposes a new method for creating robust S-boxes that exhibit superior performance and possess high scores in multiple cryptographic properties. The hybrid S-box method presented in this paper is based on Chua’s circuit chaotic map, two-dimensional cellular automata, and an algebraic permutation group structure. The proposed 16×16 S-box has an excellent performance in terms of security parameters, including a minimum nonlinearity of 102, the absence of fixed points, the satisfaction of bit independence and strict avalanche criteria, a low differential uniformity of 5, a low linear approximation probability of 0.0603, and an auto-correlation function of 28. The analysis of the performance comparison indicates that the proposed S-box outperforms other state-of-the-art S-box techniques in several aspects. It possesses better attributes, such as a higher degree of inherent security and resilience, which make it more secure and less vulnerable to potential attacks.},
-DOI = {10.3390/math11102322}
+@article{math11102322,
+	AUTHOR = {Shafique, Arslan and Khan, Kashif Hesham and Hazzazi, Mohammad Mazyad and Bahkali, Ismail and Bassfar, Zaid and Rehman, Mujeeb Ur},
+	TITLE = {Chaos and Cellular Automata-Based Substitution Box and Its Application in Cryptography},
+	JOURNAL = {Mathematics},
+	VOLUME = {11},
+	YEAR = {2023},
+	NUMBER = {10},
+	ARTICLE-NUMBER = {2322},
+	URL = {https://www.mdpi.com/2227-7390/11/10/2322},
+	ISSN = {2227-7390},
+	ABSTRACT = {Substitution boxes are the key factor in symmetric-key cryptosystems that determines their ability to resist various cryptanalytic attacks. Creating strong substitution boxes that have multiple strong cryptographic properties at the same time is a challenging task for cryptographers. A significant amount of research has been conducted on S-boxes in the past few decades, but the resulting S-boxes have been found to be vulnerable to various cyberattacks. This paper proposes a new method for creating robust S-boxes that exhibit superior performance and possess high scores in multiple cryptographic properties. The hybrid S-box method presented in this paper is based on Chua’s circuit chaotic map, two-dimensional cellular automata, and an algebraic permutation group structure. The proposed 16×16 S-box has an excellent performance in terms of security parameters, including a minimum nonlinearity of 102, the absence of fixed points, the satisfaction of bit independence and strict avalanche criteria, a low differential uniformity of 5, a low linear approximation probability of 0.0603, and an auto-correlation function of 28. The analysis of the performance comparison indicates that the proposed S-box outperforms other state-of-the-art S-box techniques in several aspects. It possesses better attributes, such as a higher degree of inherent security and resilience, which make it more secure and less vulnerable to potential attacks.},
+	DOI = {10.3390/math11102322}
 }
 
-
 @incollection{DEWDNEY2008541,
-title = {Cellular Automata},
-editor = {Sven Erik Jørgensen and Brian D. Fath},
-booktitle = {Encyclopedia of Ecology},
-publisher = {Academic Press},
-address = {Oxford},
-pages = {541-550},
-year = {2008},
-isbn = {978-0-08-045405-4},
-doi = {https://doi.org/10.1016/B978-008045405-4.00147-6},
-url = {https://www.sciencedirect.com/science/article/pii/B9780080454054001476},
-author = {A.K. Dewdney},
-keywords = {Cells, Cellular automata, Cellular models, Chemical oscillators, Classification of cellular automata, Ecological applications, Elementary cellular automata, Epidemiology, Finite automata, Game of Life, Testing models},
-abstract = {Cellular automata, the offspring of a theme in computer science, are increasingly used as models in ecological investigation. The theme embraces a range of topics, from the theory of automata to artificial intelligence. Cellular automata, as expressions of this theme, are miniature worlds inhabited by automata, one per cell. The behavior of a cellular automaton is, or can be, extraordinarily complex, not to say lifelike. It has been the main inspiration for a new research area called artificial life or, more conservatively, complex systems. Conferences are attended by computer and mathematical scientists, along with an increasing crowd of newcomers from geography, ecology, geology, other fields, and a popular following. At the present time, ecology has a fair experience with cellular automaton models, enough to abandon the early toys and exploit the true powers of this tool as a general simulation bed. At the same time, validation and interpretation remain key problems in the use of these models.}
+	title = {Cellular Automata},
+	editor = {Sven Erik Jørgensen and Brian D. Fath},
+	booktitle = {Encyclopedia of Ecology},
+	publisher = {Academic Press},
+	address = {Oxford},
+	pages = {541-550},
+	year = {2008},
+	isbn = {978-0-08-045405-4},
+	doi = {https://doi.org/10.1016/B978-008045405-4.00147-6},
+	url = {https://www.sciencedirect.com/science/article/pii/B9780080454054001476},
+	author = {A.K. Dewdney},
+	keywords = {Cells, Cellular automata, Cellular models, Chemical oscillators, Classification of cellular automata, Ecological applications, Elementary cellular automata, Epidemiology, Finite automata, Game of Life, Testing models}
+}
+
+@article{MATIN2024102752,
+	title = {A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata},
+	journal = {Artificial Intelligence in Medicine},
+	volume = {148},
+	year = {2024},
+	issn = {0933-3657},
+	doi = {https://doi.org/10.1016/j.artmed.2023.102752},
+	url = {https://www.sciencedirect.com/science/article/pii/S093336572300266X},
+	author = {Hossein Nikravesh Matin and Saeed Setayeshi},
+	keywords = {Cellular automata, Deep learning, Convolutional neural networks, Cancer},
+}
+
+@article{ION2023999,
+	title = {Breast Cancer Images Segmentation using Fuzzy Cellular Automaton},
+	journal = {Procedia Computer Science},
+	volume = {225},
+	year = {2023},
+	note = {27th International Conference on Knowledge Based and Intelligent Information and Engineering Sytems (KES 2023)},
+	issn = {1877-0509},
+	doi = {https://doi.org/10.1016/j.procs.2023.10.087},
+	url = {https://www.sciencedirect.com/science/article/pii/S1877050923012450},
+	author = {Iulia-Andreea Ion and Cristiana Moroz-Dubenco and Anca Andreica},
+	keywords = {Cellular Automaton, Fuzzy Logic, Fuzzy Cellular Automaton, Mammograms, Breast Cancer, Segmentation, Mini-MIAS dataset}
+}
+
+@book{schiff2007,
+  author    = {Joel L. Schiff},
+  title     = {Cellular Automata: A Discrete View of the World},
+  year      = {2007},
+  publisher = {John Wiley \& Sons, Inc.},
+  address   = {Hoboken, NJ},
+  isbn      = {978-0-470-11484-7}
 }
